proc-macros/tests/ui/incorrect/method/method_blocking_raw_incompatible.stderr
error: Methods cannot be blocking when used with `raw_method`; remove `blocking` attribute or `raw_method` attribute
 --> tests/ui/incorrect/method/method_blocking_raw_incompatible.rs:5:2
  |
5 | /     #[method(name = "a", blocking, raw_method)]
6 | |     fn a(&self, param: Vec<u8>);
  | |________________________________^
